# qshare

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  package.json
cmd/: integrate.go  receive.go  root.go  root_test.go  send.go
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/demo_mode_20260306/: metadata.json  plan.md  spec.md
conductor/archive/fix_secure_send_pin_bug_20260302/: metadata.json  plan.md  spec.md
docs/: product_specification.md
internal/handlers/: progress_reader.go  progress_reader_test.go  range_test.go  receive.go  receive_test.go  security.go  security_test.go  send.go  send_concurrency_test.go  send_context_test.go  send_memory_test.go  send_secure_test.go  send_test.go  send_zip_memory_test.go
internal/logger/: filter.go  filter_test.go  global.go  global_test.go  logger.go  logger_test.go  panic.go  panic_test.go  types.go  types_test.go
internal/network/: demo_test.go  interface.go  port.go
internal/server/: auth.go  server.go  server_test.go
internal/ui/: interactive.go  interactive_test.go  progress.go  progress_test.go  setup.go  setup_test.go  welcome.go  welcome_test.go
internal/workspace/: config.go  config_test.go  fs.go  fs_test.go  init.go  init_test.go  path.go  path_test.go  registry_stub.go  registry_stub_test.go  registry_windows.go  registry_windows_test.go
media/: base64.txt  base64_final.txt
scoop/: magshare.json
src/: cli.rs  locker.rs  main.rs  ui.rs
ui/: dropzone.html  embed.go  pin.html
winget/: magshare.yaml  qshare.yaml
(+65 files in other folders)
