[package]
name = "fileinbreach"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
inquire = "0.9.4"
sysinfo = "0.38.2"
windows = { version = "0.62.2", features = ["Win32_System_RestartManager", "Win32_Foundation", "Win32_System_Threading"] }
